[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dune-analytics-mcp"
version = "1.0.0"
description = "Comprehensive MCP server for Dune Analytics API built with FastMCP"
readme = "README.md"
authors = [
    {name = "Yash Kavaiya", email = "yash@example.com"}
]
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.12.0",
    "aiohttp>=3.9.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0"
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]

[project.urls]
Homepage = "https://github.com/Yash-Kavaiya/Dune-Analytics-MCP"
Repository = "https://github.com/Yash-Kavaiya/Dune-Analytics-MCP.git"
Issues = "https://github.com/Yash-Kavaiya/Dune-Analytics-MCP/issues"

[project.scripts]
dune-mcp-server = "dune_mcp_server:main"

[tool.setuptools]
py-modules = ["dune_mcp_server"]

[tool.setuptools.packages.find]
where = ["."]
include = ["dune_mcp_server*"]
